@@ -128,13 +128,13 @@ compiler frontend.
   <tr><td>avr5</td><td>atmega161</td><td>__AVR_ATmega161__</td></tr>
   <tr><td>avr5</td><td>atmega162</td><td>__AVR_ATmega162__</td></tr>
   <tr><td>avr5</td><td>atmega163</td><td>__AVR_ATmega163__</td></tr>
-  <tr><td>avr5</td><td>atmega164</td><td>__AVR_ATmega164__</td></tr>
+  <tr><td>avr5</td><td>atmega164p</td><td>__AVR_ATmega164P__</td></tr>
   <tr><td>avr5</td><td>atmega165</td><td>__AVR_ATmega165__</td></tr>
   <tr><td>avr5</td><td>atmega168</td><td>__AVR_ATmega168__</td></tr>
   <tr><td>avr5</td><td>atmega169</td><td>__AVR_ATmega169__</td></tr>
   <tr><td>avr5</td><td>atmega32</td><td>__AVR_ATmega32__</td></tr>
   <tr><td>avr5</td><td>atmega323</td><td>__AVR_ATmega323__</td></tr>
-  <tr><td>avr5</td><td>atmega324</td><td>__AVR_ATmega324__</td></tr>
+  <tr><td>avr5</td><td>atmega324p</td><td>__AVR_ATmega324P__</td></tr>
   <tr><td>avr5</td><td>atmega325</td><td>__AVR_ATmega325__</td></tr>
   <tr><td>avr5</td><td>atmega3250</td><td>__AVR_ATmega3250__</td></tr>
   <tr><td>avr5</td><td>atmega329</td><td>__AVR_ATmega329__</td></tr>
@@ -143,6 +143,7 @@ compiler frontend.
   <tr><td>avr5</td><td>atmega64</td><td>__AVR_ATmega64__</td></tr>
   <tr><td>avr5</td><td>atmega640</td><td>__AVR_ATmega640__</td></tr>
   <tr><td>avr5</td><td>atmega644</td><td>__AVR_ATmega644__</td></tr>
+  <tr><td>avr5</td><td>atmega644p</td><td>__AVR_ATmega644P__</td></tr>
   <tr><td>avr5</td><td>atmega645</td><td>__AVR_ATmega645__</td></tr>
   <tr><td>avr5</td><td>atmega6450</td><td>__AVR_ATmega6450__</td></tr>
   <tr><td>avr5</td><td>atmega649</td><td>__AVR_ATmega649__</td></tr>
