@@ -62,8 +62,11 @@
   + AT90USB646
   + AT90USB647
   + AT90USB1286
-  + AT90USB1287 
-  
+  + AT90USB1287
+  + ATmega164P (renamed from ATmega164)
+  + ATmega324P (renamed from ATmega324)
+  + ATmega644P
+
 * New functions: 
 
    strstr_P (Contributed by Werner Boellmann)
